# django-cooco

./: .gitignore  README.md  changelog.md  manage.py  pyproject.toml  settings.py
django_cooco/: admin.py  apps.py  urls.py  utils.py  views.py
django_cooco/migrations/: 0001_initial.py
django_cooco/templatetags/: cooco.py  cooco_tags.py
