[project]
name = "django-cooco"
version = "0.0.1"
description = "Django app to manage cookie consents"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "roberfi" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["django>=5.0,<6.0", "django-solo>=2.4,<2.5"]

[project.urls]
repository = "https://github.com/roberfi/django-cooco"

[tool.poetry]
packages = [{ include = "django_cooco" }]

[tool.mypy]
python_version = "3.10"
mypy_path = "$MYPY_CONFIG_FILE_DIR/django_cooco"
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "settings"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = [
    "DJ",  # flake8-django
    "E",   # pycodestyle error
    "EM",  # flake8-errmsg
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "PL",  # Pylint
    "RUF", # ruff-specific-rules
    "TC",  # flake8-type-checking
    "W",   # pycodestyle warning
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "1.14.1"
ruff = "0.9.3"
django-stubs = "5.1.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
